# or_research

./: .gitignore  lp.ipynb  main.py  pyproject.toml  setup.py
notebooks/: sudoku.ipynb
