[project]
name = "or-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.0",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.3",
    "ortools>=9.14.6206",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
